--- a/app/src/main/res/layout/fragment_my_achievements.xml
+++ b/app/src/main/res/layout/fragment_my_achievements.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/purple_300"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_add_task_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
