--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -1,10 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.arhiser.todolist.screens.main.MainActivity">
+    tools:context="com.example.alhamdulillah.NoteDetailsActivity">
     <item
         android:id="@+id/action_save"
         android:title="@string/save"
         app:showAsAction="always"
         android:icon="@android:drawable/ic_menu_save"/>
+
 </menu>
