dolg_namaz is correct save today_namaz is correct save salavat - save navugation page and load page jest - onDoubleClick function correct count in CountDolgNamazFragment

--- a/app/src/main/res/layout/fragment_dolg_namaz.xml
+++ b/app/src/main/res/layout/fragment_dolg_namaz.xml
@@ -29,6 +29,7 @@
         android:gravity="center"
         android:textColor="@color/purple_300"
         android:textSize="35sp"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
